Add group conversation membership lifecycle