@@ -8,6 +8,7 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.transaction.support.*;
+import java.time.OffsetDateTime;
 import java.util.*;
 
 @Service
@@ -70,19 +71,7 @@ public class ConversationService {
     @Transactional(readOnly = true)
     public List<ConversationResponse> list(String email) {
         User user = access.requireUser(email);
-        List<Conversation> result = conversations.findAllForUser(user.getId());
-        if (result.isEmpty()) return List.of();
-        List<Long> ids = result.stream().map(Conversation::getId).toList();
-        Map<Long, List<ConversationUserResponse>> people = participants.findAllByConversationIdIn(ids).stream()
-                .collect(java.util.stream.Collectors.groupingBy(p -> p.getConversation().getId(),
-                        java.util.stream.Collectors.mapping(p -> userResponse(p.getUser()), java.util.stream.Collectors.toList())));
-        Map<Long, ConversationMessageResponse> latest = messages.findLatest(ids).stream()
-                .collect(java.util.stream.Collectors.toMap(m -> m.getConversation().getId(), this::messageResponse));
-        Map<Long, Long> unread = messages.findUnreadCounts(user.getId()).stream()
-                .collect(java.util.stream.Collectors.toMap(ConversationMessageRepository.UnreadCount::getConversationId,
-                        ConversationMessageRepository.UnreadCount::getUnreadCount));
-        return result.stream().map(c -> response(c, user, people.getOrDefault(c.getId(), List.of()),
-                latest.get(c.getId()), unread.getOrDefault(c.getId(), 0L))).toList();
+        return conversations.findAllForUser(user.getId()).stream().map(c -> response(c, user)).toList();
     }
 
     @Transactional(readOnly = true)
@@ -99,12 +88,12 @@ public class ConversationService {
 
     @Transactional(readOnly = true)
     public ConversationMessagePageResponse history(Long id, Long before, int requestedLimit, String email) {
-        access.requireParticipant(id, email);
+        ConversationParticipant membership = access.requireParticipant(id, email);
         int limit = Math.max(1, Math.min(requestedLimit, 100));
         var page = PageRequest.of(0, limit + 1);
         List<ConversationMessage> descending = before == null
-                ? messages.findByConversationIdOrderByIdDesc(id, page)
-                : messages.findByConversationIdAndIdLessThanOrderByIdDesc(id, before, page);
+                ? messages.findByConversationIdAndCreatedAtGreaterThanEqualOrderByIdDesc(id, membership.getJoinedAt(), page)
+                : messages.findByConversationIdAndIdLessThanAndCreatedAtGreaterThanEqualOrderByIdDesc(id, before, membership.getJoinedAt(), page);
         boolean hasMore = descending.size() > limit;
         if (hasMore) descending = new ArrayList<>(descending.subList(0, limit));
         Long next = hasMore ? descending.get(descending.size() - 1).getId() : null;
@@ -116,10 +105,12 @@ public class ConversationService {
     public ConversationMessageResponse send(Long id, CreateConversationMessageRequest request, String email) {
         ConversationParticipant senderMembership = access.requireParticipant(id, email);
         Conversation conversation = senderMembership.getConversation();
+        if (conversation.getType() == ConversationType.GROUP && participants.countByConversationIdAndLeftAtIsNull(id) < 2)
+            throw new ConversationValidationException("A group needs at least two active participants to send messages");
         ConversationMessage message = new ConversationMessage(); message.setConversation(conversation);
         message.setSender(senderMembership.getUser()); message.setContent(request.content().trim());
         message = messages.saveAndFlush(message); senderMembership.setLastReadMessage(message); conversation.touch();
-        participants.findAllByConversationId(id).forEach(participant -> participant.setHiddenAt(null));
+        participants.findAllByConversationIdAndLeftAtIsNullOrderByJoinedAt(id).forEach(participant -> participant.setHiddenAt(null));
         ConversationMessageResponse result = messageResponse(message);
         List<UserConversationUpdate> updates = conversationUpdates(conversation);
         broadcastAfterCommit(new ConversationMessageEvent(ConversationMessageEventType.CREATED, result), updates);
@@ -182,13 +173,110 @@ public class ConversationService {
     @Transactional
     public ConversationResponse markRead(Long id, String email) {
         ConversationParticipant participant = access.requireParticipant(id, email);
-        messages.findTopByConversationIdOrderByIdDesc(id).ifPresent(participant::setLastReadMessage);
+        messages.findTopByConversationIdAndCreatedAtGreaterThanEqualOrderByIdDesc(id, participant.getJoinedAt()).ifPresent(participant::setLastReadMessage);
         ConversationResponse result = response(participant.getConversation(), participant.getUser());
         TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
             @Override public void afterCommit() { broker.convertAndSend(
                     "/topic/users/" + participant.getUser().getId() + "/conversations", ConversationListEvent.upsert(result)); }
         });
         return result;
+    }
+
+    @Transactional(readOnly = true)
+    public List<ConversationParticipantResponse> participants(Long id, String email) {
+        Conversation conversation = requireGroup(access.requireParticipant(id, email).getConversation());
+        return participants.findAllByConversationIdAndLeftAtIsNullOrderByJoinedAt(id).stream()
+                .map(member -> new ConversationParticipantResponse(member.getUser().getId(), member.getUser().getDisplayName(),
+                        null, member.getJoinedAt(), member.getUser().getId().equals(conversation.getCreatedBy().getId()) ? "CREATOR" : "MEMBER"))
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<ConversationUserResponse> eligibleParticipants(Long id, String email) {
+        ConversationParticipant requester = access.requireParticipant(id, email);
+        requireGroup(requester.getConversation());
+        Set<Long> activeIds = new HashSet<>(participants.findUserIds(id));
+        return workspaceMembers.findMessageableUsers(requester.getUser().getId()).stream()
+                .filter(user -> !activeIds.contains(user.getId()) && !user.getId().equals(requester.getUser().getId()))
+                .map(this::userResponse).toList();
+    }
+
+    @Transactional
+    public ConversationResponse addParticipants(Long id, AddConversationParticipantsRequest request, String email) {
+        ConversationParticipant requester = access.requireParticipant(id, email);
+        Conversation conversation = requireGroup(requester.getConversation());
+        LinkedHashSet<Long> ids = new LinkedHashSet<>(request.userIds());
+        if (ids.size() != request.userIds().size()) throw new ConversationValidationException("Duplicate users are not allowed");
+        if (ids.contains(requester.getUser().getId())) throw new ConversationValidationException("You are already in this group");
+        long activeCount = participants.countByConversationIdAndLeftAtIsNull(id);
+        if (activeCount + ids.size() > 9) throw new ConversationValidationException("A group conversation supports at most 9 participants");
+        OffsetDateTime now = OffsetDateTime.now();
+        for (Long userId : ids) {
+            User target = users.findById(userId).orElseThrow(() -> new com.amar.slackclone.channel.UserNotFoundException(userId));
+            requireSharedWorkspace(requester.getUser().getId(), target.getId());
+            Optional<ConversationParticipant> existing = participants.findByConversationIdAndUserId(id, userId);
+            if (existing.isPresent() && existing.get().isActive())
+                throw new ConversationValidationException(target.getDisplayName() + " is already in this group");
+            ConversationParticipant membership = existing.orElseGet(() -> {
+                ConversationParticipant value = new ConversationParticipant(); value.setConversation(conversation); value.setUser(target); return value;
+            });
+            membership.setJoinedAt(now); membership.setLeftAt(null); membership.setHiddenAt(null); membership.setLastReadMessage(null);
+            participants.save(membership);
+        }
+        conversation.touch(); participants.flush();
+        ConversationResponse result = response(conversation, requester.getUser());
+        broadcastMembershipAfterCommit(conversation, "PARTICIPANT_ADDED", null);
+        return result;
+    }
+
+    @Transactional
+    public void removeParticipant(Long id, Long userId, String email) {
+        ConversationParticipant requester = access.requireParticipant(id, email);
+        Conversation conversation = requireGroup(requester.getConversation());
+        if (!requester.getUser().getId().equals(conversation.getCreatedBy().getId()))
+            throw new ConversationAccessDeniedException("Only the group creator can remove participants");
+        if (userId.equals(requester.getUser().getId()))
+            throw new ConversationValidationException("Use Leave group to leave your own group");
+        ConversationParticipant target = participants.findByConversationIdAndUserId(id, userId)
+                .filter(ConversationParticipant::isActive)
+                .orElseThrow(() -> new ConversationValidationException("User is not an active participant"));
+        deactivate(target); conversation.touch();
+        broadcastMembershipAfterCommit(conversation, "PARTICIPANT_REMOVED", userId);
+    }
+
+    @Transactional
+    public void leave(Long id, String email) {
+        ConversationParticipant requester = access.requireParticipant(id, email);
+        Conversation conversation = requireGroup(requester.getConversation());
+        long activeCount = participants.countByConversationIdAndLeftAtIsNull(id);
+        if (requester.getUser().getId().equals(conversation.getCreatedBy().getId()) && activeCount > 1)
+            throw new ConversationValidationException("Transfer of group ownership is not supported yet");
+        deactivate(requester); conversation.touch();
+        broadcastMembershipAfterCommit(conversation, "PARTICIPANT_LEFT", requester.getUser().getId());
+    }
+
+    private Conversation requireGroup(Conversation conversation) {
+        if (conversation.getType() != ConversationType.GROUP)
+            throw new ConversationValidationException("Participant management is only available for group conversations");
+        return conversation;
+    }
+
+    private void deactivate(ConversationParticipant participant) {
+        participant.setLeftAt(OffsetDateTime.now()); participant.setHiddenAt(OffsetDateTime.now()); participant.setLastReadMessage(null);
+    }
+
+    private void broadcastMembershipAfterCommit(Conversation conversation, String type, Long removedUserId) {
+        List<UserConversationUpdate> activeUpdates = conversationUpdates(conversation);
+        TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
+            @Override public void afterCommit() {
+                if (removedUserId != null) broker.convertAndSend("/topic/users/" + removedUserId + "/conversations",
+                        ConversationListEvent.removed(conversation.getId()));
+                broadcastListUpdates(activeUpdates);
+                activeUpdates.forEach(update -> broker.convertAndSend("/topic/users/" + update.userId()
+                        + "/conversations/" + conversation.getId() + "/metadata",
+                        new ConversationMetadataEvent(type, conversation.getId(), removedUserId)));
+            }
+        });
     }
 
     private void requireSharedWorkspace(Long first, Long second) {
@@ -200,12 +288,14 @@ public class ConversationService {
     }
     private String directKey(Long a, Long b) { return Math.min(a, b) + ":" + Math.max(a, b); }
     private ConversationResponse response(Conversation conversation, User viewer) {
-        List<ConversationUserResponse> people = participants.findAllByConversationId(conversation.getId()).stream()
+        List<ConversationUserResponse> people = participants.findAllByConversationIdAndLeftAtIsNullOrderByJoinedAt(conversation.getId()).stream()
                 .map(ConversationParticipant::getUser).map(this::userResponse).toList();
         var membership = participants.findByConversationIdAndUserId(conversation.getId(), viewer.getId()).orElseThrow();
         long after = membership.getLastReadMessage() == null ? 0L : membership.getLastReadMessage().getId();
-        ConversationMessageResponse last = messages.findTopByConversationIdOrderByIdDesc(conversation.getId()).map(this::messageResponse).orElse(null);
-        return response(conversation, viewer, people, last, messages.countUnread(conversation.getId(), after, viewer.getId()));
+        ConversationMessageResponse last = messages.findTopByConversationIdAndCreatedAtGreaterThanEqualOrderByIdDesc(
+                conversation.getId(), membership.getJoinedAt()).map(this::messageResponse).orElse(null);
+        return response(conversation, viewer, people, last, messages.countUnreadSince(
+                conversation.getId(), membership.getJoinedAt(), after, viewer.getId()));
     }
     private ConversationResponse response(Conversation conversation, User viewer, List<ConversationUserResponse> people,
             ConversationMessageResponse last, long unread) {
@@ -230,7 +320,7 @@ public class ConversationService {
             throw new ConversationAccessDeniedException("Only the sender can modify this message");
     }
     private List<UserConversationUpdate> conversationUpdates(Conversation conversation) {
-        return participants.findAllByConversationId(conversation.getId()).stream()
+        return participants.findAllByConversationIdAndLeftAtIsNullOrderByJoinedAt(conversation.getId()).stream()
                 .filter(participant -> participant.getHiddenAt() == null)
                 .map(ConversationParticipant::getUser)
                 .map(user -> new UserConversationUpdate(user.getId(), response(conversation, user))).toList();
@@ -239,7 +329,8 @@ public class ConversationService {
     private void broadcastAfterCommit(ConversationMessageEvent event, List<UserConversationUpdate> updates) {
         TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
             @Override public void afterCommit() {
-                broker.convertAndSend("/topic/conversations/" + event.message().conversationId() + "/messages", event);
+                updates.forEach(update -> broker.convertAndSend("/topic/users/" + update.userId()
+                        + "/conversations/" + event.message().conversationId() + "/messages", event));
                 broadcastListUpdates(updates);
             }
         });
